tests/fixtures/errors/e0503_two_on_blocks.mimz
// expect: E0503
module M {
  clock clk
  reset rst
  out y: bit
  reg v: bit = 0
  on rise(clk) {
    v <- 1
  }
  on rise(clk) {
    v <- 0
  }
  y = v
}
